--- a/src/components/User.module.css
+++ b/src/components/User.module.css
@@ -17,3 +17,54 @@ gap: 1.2rem;
  border-radius: 50%;
 
 }
+
+.location{
+display:flex;
+align-items:center;
+gap: 0.4rem;
+
+}
+
+.location span{
+
+    color:#9da5d1;
+    font-weight: bold;
+
+}
+.stats{
+display:flex;
+}
+
+.stats div{
+
+
+    padding:1rem;
+    display:flex;
+    flex-direction : column;
+    gap: .4rem
+}
+
+.stats div:first-child {
+ border-right: 1px solid #9da5d1;
+
+}
+.number {
+background-color:#4ed8c7;
+padding: .2rem .4rem;
+border-radius: 3px;
+
+
+}
+
+.projetos{
+text-align:center;
+background-color: #644aff;
+padding: 1rem;
+border-radius: 5px;
+opacity: .8;
+transition: .3s;
+}
+.projetos:hover{
+opacity: 1;
+
+}
